# jobhunter

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  DECISIONS.md  Dockerfile  README.md  canonical-cv.json  canonical-cv.json.pre-portfolio.bak  config.yaml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
.codex/: config.toml  hooks.json
.github/workflows/: ci.yml  release.yml
_bmad/: config.toml  config.user.toml
_bmad-output/decisions/: llm-provider.md
_bmad-output/implementation-artifacts/: 1-1-runtime-language-and-canonical-cv-schema-bootstrap.md  1-2-cli-scaffold-env-secrets-handling-and-cost-cap-config.md  1-3-canonical-cv-reader-with-pdf-docx-ingest-rejection.md  1-4-jobhunter-paste-jd-ingest-from-stdin-or-file-argument.md  1-5-single-tailoring-llm-call-writes-tailored-cv-cover-letter-to-out-slug.md  epic-1-retro-2026-05-23.md  sprint-status.yaml
_bmad-output/planning-artifacts/: epics.md  prd.md  product-brief-job-hunter-distillate.md  product-brief-job-hunter.md
_bmad-output/story-automator/: complexity-orchestration-1-20260522-181652.json  init-log-2026-05-22T17-59-57Z.md  init-log-20260523T022030Z.md  orchestration-1-20260522-181652.md  preflight-1-2026-05-22T18-07-19Z.md
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml  skill-manifest.csv
_bmad/baut/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
deploy/n8n/: Dockerfile  Dockerfile.dockerignore  job-scan-workflow.sdk.js  mcp.json  run-scan.sh
design_guidelines/stitch-export/: INDEX.md  design.md
docker/: supervisord.conf
docs/: canonical-cv-extensions.md  deployment.md  design-gap-checklist.md  gap-decisions.md  n8n-contract.md
docs/cv-sources/: freelance-projects-2026-05-24.md  stratpoint-current-role-2026-05-24.md
docs/deployment/: aws-ec2.md  aws-lightsail.md  continuous-deployment.md  n8n-scan-engine.md  oracle-cloud.md
n8n/: README.md  auth-test.json  linkedin-email-parser-flow.json  onlinejobs-ph-listings-flow.json  upwork-search-flow.json
prompts/: claims_extract.v1.md  cover_letter.v1.md  jd_parse.v1.md  job_scan.v1.md  upwork_proposal.v1.md
samples/: canonical-cv-draft.json  canonical-cv-with-extensions.json
schemas/: jsonresume-v1.0.0.json
scripts/: build_tokens.py  validate_canonical_cv.py
src/jobhunter/: application_store_pg.py  application_tracker.py  artifact_selector.py  board_classifier.py  canonical_cv.py  canonical_profile.py  claim_extractor.py  cli.py  config.py  content_loss_matcher.py  content_loss_writer.py  drift_report.py  fabrication_matcher.py  held_package.py  jd_parser.py  keyword_stuffing_matcher.py  keyword_stuffing_writer.py  llm_client.py  metadata.py  notifier.py  pdf_writer.py  prompts.py  runtime_config.py  scan.py  scan_store_pg.py  semantic_matcher.py  signals_onlinejobs_ph.py  signals_upwork.py  slug.py  spend_tracker.py  stats.py  tailoring.py  yaml_config.py
supabase/migrations/: 20260607000000_application_tracker.sql  20260626000000_job_scan.sql  20260627000000_scan_location.sql  20260627010000_scan_status.sql  20260628000000_application_snapshots.sql
tasks/: lessons.md  todo.md
tests/: conftest.py  fake_application_store.py  fake_scan_store.py  test_pdf_writer.py
tests/integration/: _cli_helpers.py  _web_helpers.py  conftest.py  test_application_store_pg.py  test_applications_api.py  test_artifact_set_in_pipeline.py  test_board_classifier_in_pipeline.py  test_canonical_cv_api.py  test_canonical_cv_out_of_band.py  test_canonical_cv_raw_api.py  test_claim_extraction_timeout.py  test_claims_json_in_pipeline.py  test_cli_entry.py  test_content_loss_drift_json_in_pipeline.py  test_content_loss_in_pipeline.py  test_drift_api.py  test_drift_api_content_loss.py  test_drift_api_keyword_stuffing.py  test_drift_history_api.py  test_drift_json_in_pipeline.py  test_held_on_content_loss_only_fail.py  test_held_on_keyword_stuffing_only_fail.py  test_held_package_in_pipeline.py  test_held_package_sweep.py  test_keyword_stuffing_drift_json_in_pipeline.py  test_keyword_stuffing_in_pipeline.py  test_n8n_contract.py  test_notification_in_pipeline.py  test_onlinejobs_ph_signals_in_pipeline.py  test_override_api.py  test_package_api.py  test_paste_auth.py  test_paste_jd_ingest.py  test_paste_runs_parser.py  test_paste_tailoring.py  test_placement_in_pipeline.py  test_queue_api.py  test_queue_api_empty.py  test_regenerate_supersede.py  test_scans_api.py  (+10 more)
tests/unit/: _yaml_fixtures.py  test_application_tracker.py  test_artifact_selector.py  test_auth_test_flow_json.py  test_board_classifier.py  test_canonical_cv_extensions.py  test_canonical_cv_reader.py  test_canonical_profile.py  test_canonical_profile_api.py  test_claim_extractor.py  test_config.py  test_content_loss_config.py  test_content_loss_matcher.py  test_content_loss_writer.py  test_drift_report.py  test_extract_jd_api.py  test_fabrication_matcher.py  test_fake_scan_store.py  test_held_package.py  test_held_ttl_config.py  test_jd_parser.py  test_jd_parser_imports.py  test_job_scan_prompt.py  test_keyword_stuffing_config.py  test_keyword_stuffing_imports.py  test_keyword_stuffing_matcher.py  test_keyword_stuffing_placement.py  test_keyword_stuffing_writer.py  test_linkedin_flow_json.py  test_llm_client.py  test_metadata.py  test_notifier.py  test_notifier_module_contract.py  test_ojph_flow_json.py  test_override_imports.py  test_prompts.py  test_runtime_config.py  test_runtime_config_gchat.py  (+20 more)
(+76 files in other folders)
