[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jobhunter"
version = "0.1.0"
description = "Solo-developer job-application tailoring pipeline (walking skeleton)."
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "dave" }]
dependencies = [
    "jsonschema>=4.21",
    "python-dotenv>=1.2.2",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
jobhunter = "jobhunter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
