[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jobhunter"
version = "0.1.0"
description = "Solo-developer job-application tailoring pipeline (walking skeleton)."
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "dave" }]
dependencies = [
    "jsonschema>=4.21",
    "python-dotenv>=1.2.2",
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pip-audit>=2.7",
    "types-PyYAML>=6.0",
    "types-Markdown>=3.6",
    # tests/test_pdf_writer.py reads WeasyPrint output back via PdfReader.
    "pypdf>=4.0",
]
web = [
    "fastapi[all]>=0.110",
    "uvicorn[standard]>=0.27",
    "weasyprint>=62.0",
    "markdown>=3.6",
    "psycopg[binary]>=3.1",
]

[project.scripts]
jobhunter = "jobhunter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# Ship the built frontend and vendored fonts inside the wheel/sdist. setuptools
# packages.find only collects *.py; without this the installed package serves a
# broken UI (no dist/) and crashes on PDF export (no fonts/). The vendored JSON
# Resume schema lives at the repo root and is read via PROJECT_ROOT, so it is
# NOT part of the wheel — wheel installs must run from a checkout or rely on the
# Docker image, which copies the whole repo. See README "Packaging" note.
[tool.setuptools.package-data]
jobhunter = [
    "web/frontend/dist/**/*",
    "web/fonts/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Repo root ("." ) is needed so integration tests can `from tests.integration...`
# import shared helpers under the bare `pytest` console script (CI). Without it,
# only `python -m pytest` worked (that injects the CWD onto sys.path).
pythonpath = ["src", "."]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "scripts"]
extend-exclude = ["src/jobhunter/web/frontend"]

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, bugbear, pyupgrade, comprehensions.
select = ["E", "F", "I", "B", "UP", "C4"]
ignore = ["E501"]  # line length is handled by the formatter, not linting

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["jobhunter"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
# Pragmatic for an existing codebase: type-check what is annotated, do not
# force annotations everywhere yet. Tighten over time.
check_untyped_defs = true
